Fixed colour schemes, logins acting funny, not working on IE7

--- a/tconnect/main.css
+++ b/tconnect/main.css
@@ -7,14 +7,14 @@ form, a{ margin: 0;
          border: 0; 
          }
 body,
-html{ background:#aaf; }
+html{ background:#0AAAFF; }
 body{ font-size: small;
       font-family: Verdana,Arial,Helvetica,sans-serif;
       min-width: 47em;
       text-align: center;
       }
 h1{ color: #0EA0CA;
-    text-align: center;
+    /* text-align: center; */
     font-size: 1.25em;
     }
 h2{ color: #AF0407;
@@ -26,21 +26,27 @@ h3{ color: #0EA0CA;
     font-size: 0.88em;
     }
 p{ margin: 0 0 1em 0.5em; }
+a { background:transparent none repeat scroll 0 0;
+    border-bottom:1px dotted;
+    border-color: #f00;
+    text-decoration:none;
+    }
+a:link { color: #fff; }
+a:visited { color:#f00; }
+a:hover { color: #f00; }
 /* Classes */
 .floatRight { float: right; }
 .floatLeft { float: left; }
-.bigLetter { font-size: 2em;
-             background-color: #010011;
-             }
+.error { color: red; }
 /* Wraper over the content */
-div#container{ color: #0B51F9;
+div#container{ color: #fff;
                margin-left: auto;
                margin-right: auto;
                }
-/* div#container p{ color: #50D0C9; } */
 /* Styling for the header */
 div#header{ background-color: #123456;
             border-bottom: ridge;
+            font-family: Georgia,serif;
             }
 div#header h1{ font-size: 1.75em;
                text-align: left;
@@ -54,30 +60,28 @@ div#header h2{ font-size: 1.5em;
                color: #8800FF;
                }
 /* Styling for the status information */
-div#status {background-color: white;
-             }
+div#status { }
 /* Styling for the main body */ 
 div#main{ width: 82.5%;
           border-color: #0056ad;
-          border-right: 1px dashed;
+          border-left: 1px dashed;
           margin-left: auto;
           margin-right: auto;
           text-align: left;
-          padding: 0.5%;
+          padding: 1%;
           }
-div#main input{ display: block; }
+div#main input{ display: inline; }
 /* Styling for creating a nav */
 div#nav{ clear: both;
          width: 15%;
          background-color: #003355;
          color: #00BBBB;
-         /* padding: 1%; */
          margin-right: 0.5em;
          }
 div#nav h3{ border-bottom: 1px dashed; }
 div#nav ul{ margin: 0em;
             padding: 0em;
-            font-size: 0.75em;
+            font-size: 0.8em;
             color: #FFF;
             line-height: 2.5em;
             white-space: nowrap;
@@ -89,11 +93,10 @@ div#nav li{ list-style-type: none;
 div#nav li a{ text-decoration: none;
               padding: 0.44em 1.19em;
               color: #00F;
+              border-bottom: none;
               }
-div#nav li a:link{ color: #FFF;
-                      }
-div#nav li a:visited{ color: #CCC;
-                         }
+div#nav li a:link { color: #fff; }
+div#nav li a:visited { color: #fff; }
 div#nav li a:hover{ /* font-weight: bold; */
                     color: #FFF;
                     background-color: #3366FF;
